tests/error/comprehension_errors/multi_use2.err
Guppy compilation failed. Error in file $FILE:13

11:    @guppy(module)
12:    def foo(qs: linst[Qubit], xs: list[int]) -> linst[Qubit]:
13:        return [q for x in xs for q in qs]
                                          ^^
GuppyTypeError: Variable `qs` with linear type `linst[Qubit]` would be used multiple times when evaluating this comprehension
